# daskrw

./: README.md  pyproject.toml
src/: reader.py  tozarr.py
src/daskrw/: __main__.py  constants.py  reader.py  tozarr.py  writer.py
