[project]
authors = [{name = "Nodar Gogoberidze", email = "gnodar01@gmail.com"}]
dependencies = [
  "dask<=2025.3.0",
  "zarr>=2.16.1",
  "ome-zarr==0.10.2", # last version supporting 3.9
  "numpy>=1.24.4,<2",
  "tifffile[codecs]>=2022.4.8",
]
name = "daskrw"
requires-python = ">=3.9"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-64"]

[tool.pixi.pypi-dependencies]
daskrw = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
python = "3.9.*"
